@@ -2,6 +2,7 @@
     "LISTENIP": "0.0.0.0",
     "LISTENPORT": 3218,
     "BASEPATH": null,
+    "ENFORCE_BASEPATH": false,
     "SSL_CERTIFICATE": null,
     "SSL_KEY": null,
     "HASS_API": "http://127.0.0.1:8123/api/",
